Fix new form fields on mobile. Jump to Phone form when source=directcall

--- a/css/call.css
+++ b/css/call.css
@@ -1290,9 +1290,15 @@ textarea {
         grid-template-columns: 65% 35%;
         grid-template-rows: auto;
         grid-row-gap: 10px;            
-        grid-template-areas: "myName myName" "myEmail myEmail" "myAddress myAddress" "myCity myCity" "myState myZip"
-        "myButton myButton"
-        "myText myText";
+        grid-template-areas:
+                "myName myName"
+                "myEmail myEmail"
+                "myAddress myAddress"
+                "myCity myCity"
+                "myState myState"
+                "myZip myZip"
+                "myButton myButton"
+                "myText myText";
     }
 
     #app {
@@ -1325,7 +1331,7 @@ textarea {
         font-size: 1em;
     }
 
-    #email, #app #state {
+    #email, #app #state, #zip {
         margin-left: 0
     }
 }
